fix: 입력단어의 같은글자가 여러번 중복될때 고려못한 케이스들 수정